snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.pom.sha256
37dd33ac125dd91c2952783953e019e8dbd208b976a2c569da5c1b7072488d6d